.main fix color contrast issues

--- a/style/_main.scss
+++ b/style/_main.scss
@@ -47,7 +47,8 @@
             }
     
             p {
-                color: $grayish-blue;
+                // color: $grayish-blue;
+                color: #545463;
                 font-size: .9rem;
             }
     
@@ -86,7 +87,8 @@
             }
     
             p {
-                color: $grayish-blue;
+                // color: $grayish-blue;
+                color: #545463;
                 font-size: 1rem;
             }
     
